--- a/src/DarkMode.css
+++ b/src/DarkMode.css
@@ -148,3 +148,22 @@
     text-transform: uppercase;
     border: none;
 }
+.animation-moon{
+    border-radius: 1100px;
+    background: #22336D4D;
+    box-shadow: 0px -50px 100px 0px rgba(4, 21, 212, 0.5), -10px 0px 20px 0px rgba(5, 196, 238, 0.5), 10px 0px 20px 0px rgba(5, 112, 226, 0.5);
+    width: 1100px;
+    height: 1100px;
+    flex-shrink: 0;
+    position: relative;
+    bottom: 1600px;
+    left: 200px;
+    animation-name: example2;
+    animation-duration: 6s;
+    z-index: 100000;
+}
+
+@keyframes example2 {
+    from { bottom: 1600px; left: 200px;}
+  to { bottom: 100px; left: 200px;}
+}
