--- a/src/LightMode.css
+++ b/src/LightMode.css
@@ -6,7 +6,7 @@
   }
 .Light{
     background: linear-gradient(134deg, #E8F0FD 0%, #FFF 100%);
-    height: 800vh;
+    height: 250vh;
 }
 .navbar{
     display: block;
@@ -146,4 +146,24 @@
     line-height: 100%; /* 17px */
     text-transform: uppercase;
     border: none;
+}
+
+.animation-sun{
+    border-radius: 1100px;
+    background: rgba(251, 189, 2, 0.885);
+    box-shadow: 0px -50px 100px 0px rgba(255, 234, 128, 0.50), -10px 0px 20px 0px rgba(255, 234, 128, 0.50), 10px 0px 20px 0px rgba(255, 234, 128, 0.50);
+    width: 1100px;
+    height: 1100px;
+    flex-shrink: 0;
+    position: relative;
+    bottom: 100px;
+    left: 200px;
+    animation-name: example;
+    animation-duration: 6s;
+    z-index: 100000;
+}
+
+@keyframes example {
+    from { bottom: 100px; left: 200px;}
+  to { bottom: 1600px; left: 200px;}
 }
